<resources>
    <string name="app_name">FieldtripGB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_my_location">My Location</string>
    <string name="action_start_tracking">Start Tracking</string>
    <string name="action_stop_tracking">Stop Tracking</string>
    <string name="action_search">Search</string>
    <string name="action_create_record">Create Record</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="gallery_photo_button">Gallery Photo</string>
    <!-- Access Token -->
    <string name="testAccessToken" translatable="false">pk.eyJ1IjoiYmxlZWdlIiwiYSI6IkRGLTFPU00ifQ.qJpq3jytAL9A-z_tkNypqg</string>
    <!-- Style and source url -->
    <string name="styleUrl" translatable="false">http://129.215.169.232/bright-v8-3.json</string>
</resources>

