<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FieldTripMap">

    <item android:id="@+id/action_my_location" android:title="@string/action_my_location"
        android:orderInCategory="100" android:icon="@drawable/ic_action_my_location" app:showAsAction="ifRoom" />

    <item android:id="@+id/create_record" android:title="@string/action_create_record"
        android:orderInCategory="100" android:icon="@drawable/ic_action_pin_drop_white" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="100" android:icon="@drawable/ic_action_search" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_start_tracking" android:title="@string/action_start_tracking"
        android:orderInCategory="100" android:icon="@drawable/ic_action_gesture_white" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
